# jsdl2

./: .gitignore  .travis.yml  LICENSE  README.md  build.gradle  cmake.gradle  dependencies.gradle  gradle.properties  settings.gradle
jsdl2/: build.gradle
jsdl2-native/: build.gradle
jsdl2-native/src/: CMakeLists.txt
jsdl2-native/src/jni/: event_objects.c  event_objects.h  events_jni.c  jni_except.h  jni_objects.c  jni_objects.h  power_jni.c  sdl_jni.c
jsdl2/src/main/java/sdl2/: JoystickType.java  SDLEvents.java  SDLGameController.java
native/: .gitignore  CMakeLists.txt
native/jni/: events_jni.c  gamecontroller_jni.c  jni_except.c  jni_except.h  jni_objects.c  jni_objects.h  joystick_jni.c  sdl_ex.c  sdl_ex.h  sdl_jni.c
sdl/: build.gradle
sdl/native/: .gitignore  CMakeLists.txt
sdl/native/jni/: gamecontroller_jni.c  joystick_jni.c  sdl_jni.c
sdl/src/main/java/sdl2/: GameControllerAxis.java  GameControllerButton.java  GameControllerJni.java  JoystickJni.java  JoystickType.java  SdlJni.java
src/main/java/sdl2/: EventsJni.java  PowerInfo.java  PowerState.java  SDL.java  SDLEvents.java  SDLException.java  SDLGameController.java  SDLJoystick.java  SDLPower.java
src/main/java/sdl2/events/: BallMotionEvent.java  ButtonChangeEvent.java  CButtonChangeEvent.java  CDeviceConnectionEvent.java  DeviceConnectionEvent.java  Event.java  EventType.java  HatMotionEvent.java  JBallMotionEvent.java  JButtonChangeEvent.java  JDeviceConnectionEvent.java  JHatMotionEvent.java
testapp/: build.gradle
testapp/src/main/java/test/: Main.java
(+6 files in other folders)
